[metadata]
name = mlnx-sriov-ceilometer
version = 7.0.0
summary = OpenStack Telemetry
description-file =
    README.rst
author = lennyb
author-email = lennyb@mellanox.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring


[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ceilometer/compute/virt/mlnx_libvirt

[entry_points]
ceilometer.compute.virt =
     mlnx_libvirt = ceilometer.compute.virt.mlnx_libvirt.inspector:MlnxLibvirtInspector

[pbr]
warnerrors = true

